add import alias and clean folder structure

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,7 +24,10 @@
 
     "baseUrl": "./src",
     "paths": {
-      "@components/*": ["components/*"]
+      "@components/*": ["components/*"],
+      "@api/*": ["api/*"],
+      "@constants": ["constants.ts"],
+      "@helpers": ["helpers.ts"]
     }
   },
   "include": ["src"]
